src/test/deca/context/invalid/created/return/return_float_bool.deca
// Description :
//    return mauvais type : bool, demandé int
// Resultats :
//		Erreur contextuelle
//    	Ligne 9: ?? 

class A{
int met(){
return true;
}
}